[package]
name = "sanatio"
version = "0.1.0"
edition = "2021"

[dependencies]
sanatio_derive = { path = "../sanatio_derive" }
# Url parsing and validation
url = { version = "2", features = ["serde"] }
# Phone number parsing and validation
phonenumber = "0.3"
# Email parsing and validation
fast_chemail = "0.9"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"